<resources>
    <string name="app_name">Login_Demo</string>
    <string name="Login">Login</string>
    <string name="username">username</string>
    <string name="registration">Registration</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="pass">PassWord</string>
    <string name="Email">Email</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>

</resources>
