<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:gravity="center"
        android:background="@color/colorBacground">


        <TextView
            android:id="@+id/textview"
            android:text="@string/registration"
            android:layout_marginTop="70dp"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/textview"
            android:layout_marginStart="40dp" />

        <EditText
            android:id="@+id/fullname"
            android:layout_below="@id/textview"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/fullname"
            android:layout_marginStart="40dp" />
        <EditText
            android:id="@+id/emailRegister"
            android:inputType="textPassword"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:layout_below="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextFields" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/emailRegister"
        android:layout_marginStart="40dp" />
    <EditText
        android:id="@+id/fullnameRegister"
        android:inputType="textPassword"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_below="@+id/emailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnLogin"

            android:layout_below="@id/fullnameRegister"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already Registered? Login Here"
            android:layout_marginTop="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:layout_below="@+id/btnLogin"
            android:textColor="@color/colorBlue"
            />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\@Tutlane.com"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            />

    </RelativeLayout>
